--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <!-- Google map script -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfs1w-aKc77jhcSvBFn6vYtDBAZFpsTCw" async defer></script>
 </head>
 
 <body>
